--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mini-gradient-preview",
   "displayName": "Mini Gradient Preview",
+  "publisher": "Vicky's Lab",
   "icon":"https://raw.githubusercontent.com/Vicky-Raj/mini-gradient-preview/master/icon.png",
   "repository": {"type": "git","url": "https://github.com/Vicky-Raj/mini-gradient-preview"},
   "description": "An extension to help visualize css graidents in editor",
@@ -12,7 +13,7 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "main": "./out/extension.js",
   "contributes": {
