--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "mini-gradient-preview",
   "displayName": "Mini Gradient Preview",
   "publisher": "Vicky's Lab",
-  "icon":"https://raw.githubusercontent.com/Vicky-Raj/mini-gradient-preview/master/icon.png",
-  "repository": {"type": "git","url": "https://github.com/Vicky-Raj/mini-gradient-preview"},
+  "icon": "icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/collinhawks/mini-gradient-preview.git"
+  },
   "description": "An extension to help visualize css graidents in editor",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "^1.102.0"
   },
   "categories": [
     "Other"
@@ -17,12 +20,12 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
-    "configuration":{
+    "configuration": {
       "title": "Gradient Preview",
       "properties": {
-        "mini-gradient-preview.show":{
-          "type":"boolean",
-          "default":true,
+        "mini-gradient-preview.show": {
+          "type": "boolean",
+          "default": true,
           "description": "Whether to show gradient previews in the current workspace"
         }
       }
@@ -47,16 +50,16 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "@vscode/test-electron": "^2.2.0",
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
     "typescript": "^4.9.3",
-    "@vscode/test-electron": "^2.2.0"
+    "vscode": "^1.1.37"
   }
 }
